--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="inside">
         <p>Wishing you a very Happy Birthday filled with lots of love and laughter</p>
         <div class="image">
-          <img src="D:\kusuma\GiftCards\BharaniBirthDay\1662899389564.jpg" alt="">
+          <img src="file:///D:/kusuma/GiftCards/BharaniBirthDay/1662899389564.jpg" alt="">
         </div>
 
 
